--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,79 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
+.env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.vscode/
+.idea/
+.DS_Store
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# dotenv environment variables file
+.env
+
+# Mac system files
+.DS_Store
+
+# Build directory
+dist/
+build/
+
+# Next.js
+.next/
+out/
+
+# Production
+/public/static
+public/static
+
+# Test coverage
+coverage/
+*.lcov
+
+# Optional npm cache directory
+.npm
+
+# SvelteKit
+.svelte-kit/
+
+# Vercel
+.vercel/
+
+# Nuxt.js
+.nuxt/
+output/
+
+# Gatsby files
+.cache/
+public/
+
+# Expo files
+.expo/
+.expo-shared/
+
+# Ignore Python-related files
+__pycache__/
+*.py[cod]
+*.egg-info/
+
+# Ignore temporary files created by TextMate, Sublime Text, etc.
+*.tmproj
+*.sublime-project
+*.sublime-workspace
