--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
@@ -20,7 +21,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
+    "swagger-ui-express": "^5.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
